style: ajuste formatação do CSS

--- a/css/style.css
+++ b/css/style.css
@@ -197,6 +197,7 @@ span{
   letter-spacing: 0.1rem;
   /* N lines ... */
   display: -webkit-box;
+  -webkit-line-clamp: 4;
   -webkit-box-orient: vertical;
   overflow: hidden;
   text-overflow: ellipsis;
